resource data, import